chore(build): bump version to 1.0.21
- Update version in build.gradle.kts to 1.0.21
- Refactor credentials handling in build.gradle.kts for consistency
- Improve imports and code structure in BuildFormatManager.java
- Introduce MarkerAdapter interface to allow custom types in build requirements
- Update tests in BuildMetaFormatManagerTest.java for new format changes